--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -1616,6 +1616,7 @@ body {
   letter-spacing: -0.015rem;
   position: absolute;
   width: 100%;
+  max-width: 100%;
   height: 100%;
   max-height: 400px;
   padding: 0.3125rem 0.625rem;
@@ -1623,9 +1624,8 @@ body {
   text-overflow: clip;
   z-index: 1;
   resize: vertical;
-  /*word-wrap: break-word;*/
   word-break: break-all;
-  /*overflow-wrap: break-word;*/
+  overflow-wrap: break-word;
   overflow-x: hidden;
   overflow-y: auto; }
   .text-area__input:focus, .text-area__input:active {
